<resources>
    <string name="app_name">ZhouTianDemo</string>
    <string name="shouye">首页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoucang">收藏</string>
    <string name="ditu">地图</string>
    <string name="weidenglu">登录/用户名</string>
    <string name="quxiaoshoucang">取消收藏</string>
    <string name="dingwei">定位</string>
    <string name="marker">marker</string>
    <string name="xiangji_paishe">相机拍摄</string>
    <string name="xiangce_xuanqu">相册选取</string>
    <string name="quxiao">取消</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="QQdenglu">QQ登录</string>
    <string name="weixindenlgu">微信登录</string>
    <string name="weibodenglu">微博登录</string>
    <string name="xinlangdenglu">新浪登录</string>
    <string name="huoquyanzhengma">获取验证码</string>
</resources>
