<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/xiangji"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/xiangji_paishe"
        android:textSize="18sp" />

    <Button
        android:id="@+id/xiangce"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/xiangce_xuanqu"
        android:textSize="18sp" />

    <Button
        android:id="@+id/shangchuan_quxiao"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/quxiao"
        android:textSize="18sp" />

</LinearLayout>